# psp_to_pico

./: .gitignore  .gitmodules  README.md
deck/: CMakeLists.txt
deck/src/: main.cpp
nx/: CMakeLists.txt
nx/src/: Makefile  generateBuild.sh  main.cpp
pico/: CMakeLists.txt
pico/.cache/clangd/index/: lwipopts.h.35C2A46ADE37BF17.idx  main.cpp.FE4E95079DC2812A.idx
pico/src/: lwipopts.h  main.cpp
